# predictive-maintenance-failure-classifier

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/diagrams/: falhas_rotativas.md
docs/docs/: 01_business_understanding.md  02_data_understanding.md  03_data_preparation.md  04_modeling.md  05_evaluation.md  06_deployment.md  analise_associacao_categoricas.md  analise_exploratoria_dados.md  business-underst-tipos-de-falhas-e-exemplos.md  classes_falhas_rotativas.md  classificacao_motores_grau_prot_ip.md  desafio_bootcamp.md  dicionario_de_dados.md  index.md  mermaid-diagram-tipos-de-falhas-e-exemplos  modelagem_avaliacao.md
docs/docs/01_business_understanding/: falhas_rotativas_exemplos.md
models/artifacts/: label_encoder.joblib  preprocessing_spec.joblib  ranking_modelos_cv.csv
notebooks/: 1.0-rc-data-understading.ipynb  2.0-rc-data-preparation.ipynb  3.0-rc-eda.ipynb  3.0-rc-modeling.ipynb  3.0-rc-preprocessing.ipynb  4.0-rc-evaluation.ipynb  4.0-rc-modeling.ipynb  4.0-rc-modeling_evaluate.ipynb  _bkp-4.0-rc-modeling-multiclasses.ipynb  eda.ipynb  evaluation.ipynb  modeling.ipynb  preprocessing.ipynb  preprocessing_full.ipynb
reports/: profile_report_data_understanding.html  profile_report_eda.html
reports/classifier-explainer/: XGBoost_BestModel.html
reports/classifier_explainer/: LogReg_baseline.html  XGBoost.html
reports/predicoes/: predicoes_bootcamp_test.csv
reports/profile-reports/: data_cleaned.html  data_raw.html
src/: _utils.py  app.py
